--- a/manifest.json
+++ b/manifest.json
@@ -7,13 +7,13 @@
   "theme_color": "#608080",
   "icons": [
     {
-      "src": "favicon.svg",
+      "src": "../favicon.svg",
       "sizes": "48x48 72x72 96x96 128x128 256x256 512x512",
       "type": "image/svg+xml",
       "purpose": "any"
     },
     {
-      "src": "maskable_icon_x192.png",
+      "src": "../maskable_icon_x192.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
